--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
-*.css linguist-detectable=false
-*.html linguist-detectable=false
-*.htm linguist-detectable=false
-*.js linguist-detectable=false
+* linguist-vendored
+*.html linguist-vendored=false
